--- a/human_exp/decoder.ipynb
+++ b/human_exp/decoder.ipynb
@@ -1,30 +1,15 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 実験結果を１つのファイルにまとめる"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['./data/yamasaki.csv',\n",
@@ -50,8 +34,9 @@
        " './data/sugi.csv']"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -62,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,18 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(260, 3)"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "execution_count": 48
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -97,21 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
      "output_type": "stream",
-     "name": "stdout",
      "text": [
-      "class_a    racket\nclass_b      ball\nName: 0, dtype: object\nclass_a    block\nclass_b     ball\nName: 1, dtype: object\nclass_a    player\nclass_b      beam\nName: 2, dtype: object\nclass_a    alien\nclass_b     shot\nName: 3, dtype: object\nclass_a    bar_block\nclass_b        block\nName: 4, dtype: object\n"
+      "<ipython-input-18-ae61a502ce53>:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ans.iloc[0,2] = ans.iloc[0,2].replace(\"1\",\"2\")\n",
+      "<ipython-input-18-ae61a502ce53>:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ans.iloc[0,2] = ans.iloc[0,2].replace(\"2\",\"1\")\n"
      ]
     }
    ],
    "source": [
-    "for i, row in data.head().loc[:,[\"class_a\",\"class_b\"]].iterrows():\n",
+    "for i, row in data.loc[:,[\"class_a\",\"class_b\"]].iterrows():\n",
     "    #print(row)\n",
     "    for df in dfs:\n",
     "        ans = df[(df[\"class_a\"]==row[\"class_a\"]) & (df[\"class_b\"]==row[\"class_b\"])]\n",
@@ -130,18 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(260, 9)"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 52
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -150,14 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 260 entries, 0 to 259\nData columns (total 2 columns):\n #   Column   Non-Null Count  Dtype \n---  ------   --------------  ----- \n 0   class_a  260 non-null    object\n 1   class_b  260 non-null    object\ndtypes: object(2)\nmemory usage: 4.2+ KB\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 260 entries, 0 to 259\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   class_a       260 non-null    object\n",
+      " 1   class_b       260 non-null    object\n",
+      " 2   relation      260 non-null    object\n",
+      " 3   ans_yamasaki  260 non-null    object\n",
+      " 4   ans_ueda      260 non-null    object\n",
+      " 5   ans_daisuke   260 non-null    object\n",
+      " 6   ans_hosomi    260 non-null    object\n",
+      " 7   ans_kazuma    260 non-null    object\n",
+      " 8   ans_sugi      260 non-null    object\n",
+      "dtypes: object(9)\n",
+      "memory usage: 18.4+ KB\n"
      ]
     }
    ],
@@ -179,5 +188,26 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
