--- a/4.define_pca_demention_n.ipynb
+++ b/4.define_pca_demention_n.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"3.add_features_data.csv\",index_col = 0)"
+    "data = pd.read_csv(\"1_.csv\",index_col = 0)"
    ]
   },
   {
