--- a/4.predict.ipynb
+++ b/4.predict.ipynb
@@ -32,8 +32,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(447, 26)\n"
      ]
@@ -51,9 +51,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "NameError",
      "evalue": "name 'k' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -87,8 +87,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "['s2' 'h2' 's1' 'h1' 'k'],[4 1 3 0 2]\n"
      ]
@@ -160,8 +160,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1epoc\n",
       "2epoc\n",
@@ -343,16 +343,28 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "0.6868008948545862\n              precision    recall  f1-score   support\n\n           0       0.78      0.84      0.81        87\n           1       0.80      0.85      0.83        87\n           2       0.55      0.51      0.53       101\n           3       0.62      0.59      0.61        86\n           4       0.68      0.66      0.67        86\n\n    accuracy                           0.69       447\n   macro avg       0.69      0.69      0.69       447\nweighted avg       0.68      0.69      0.68       447\n\n"
+      "0.6868008948545862\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.78      0.84      0.81        87\n",
+      "           1       0.80      0.85      0.83        87\n",
+      "           2       0.55      0.51      0.53       101\n",
+      "           3       0.62      0.59      0.61        86\n",
+      "           4       0.68      0.66      0.67        86\n",
+      "\n",
+      "    accuracy                           0.69       447\n",
+      "   macro avg       0.69      0.69      0.69       447\n",
+      "weighted avg       0.68      0.69      0.68       447\n",
+      "\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "NameError",
      "evalue": "name 'cm' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -403,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
