done 6_analyse_predicted_data

--- a/3_best_model.ipynb
+++ b/3_best_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -49,14 +49,14 @@
    ],
    "source": [
     "#dataのインポート+シャッフル\n",
-    "data = pd.read_csv(\"./1_pretraind_data.csv\",index_col = 0).sample(frac=1, random_state=1).reset_index(drop=True)\n",
+    "data = pd.read_csv(\"./1_preprocessed_data.csv\",index_col = 0).sample(frac=1, random_state=1).reset_index(drop=True)\n",
     "print(data.shape)\n",
     "print(data.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "0.727843137254902"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,119 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.93      0.75      0.83        83\n",
-      "           1       0.94      0.75      0.83        83\n",
-      "           2       0.46      0.62      0.53        95\n",
-      "           3       0.66      0.68      0.67        82\n",
-      "           4       0.72      0.68      0.70        82\n",
-      "\n",
-      "    accuracy                           0.69       425\n",
-      "   macro avg       0.74      0.70      0.71       425\n",
-      "weighted avg       0.73      0.69      0.71       425\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test_arr,trans_df[\"ans_ueda\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.85      0.90      0.88        83\n",
-      "           1       0.84      0.90      0.87        83\n",
-      "           2       0.68      0.62      0.65        95\n",
-      "           3       0.71      0.70      0.70        82\n",
-      "           4       0.70      0.70      0.70        82\n",
-      "\n",
-      "    accuracy                           0.76       425\n",
-      "   macro avg       0.76      0.76      0.76       425\n",
-      "weighted avg       0.76      0.76      0.76       425\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test_arr,trans_df[\"ans_sugi\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.48      0.37      0.42        83\n",
-      "           1       0.50      0.37      0.43        83\n",
-      "           2       0.44      0.67      0.54        95\n",
-      "           3       0.48      0.48      0.48        82\n",
-      "           4       0.53      0.48      0.50        82\n",
-      "\n",
-      "    accuracy                           0.48       425\n",
-      "   macro avg       0.49      0.47      0.47       425\n",
-      "weighted avg       0.49      0.48      0.47       425\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test_arr,trans_df[\"ans_kazuma\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.89      0.84      0.86        83\n",
-      "           1       0.92      0.84      0.88        83\n",
-      "           2       0.49      0.91      0.63        95\n",
-      "           3       0.86      0.51      0.64        82\n",
-      "           4       0.93      0.51      0.66        82\n",
-      "\n",
-      "    accuracy                           0.73       425\n",
-      "   macro avg       0.82      0.72      0.74       425\n",
-      "weighted avg       0.81      0.73      0.73       425\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test_arr,trans_df[\"ans_daisuke\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -701,35 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.43      0.31      0.36        83\n",
-      "           1       0.43      0.31      0.36        83\n",
-      "           2       0.40      0.82      0.54        95\n",
-      "           3       0.36      0.24      0.29        82\n",
-      "           4       0.38      0.24      0.30        82\n",
-      "\n",
-      "    accuracy                           0.40       425\n",
-      "   macro avg       0.40      0.39      0.37       425\n",
-      "weighted avg       0.40      0.40      0.37       425\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test_arr,trans_df[\"ans_yamasaki\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +598,7 @@
        "11"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,6 +606,31 @@
    "source": [
     "len(trans_df[\"source\"].unique())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trans_df[\"pred_label\"] = y_pred_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trans_df.to_csv(\"3_predicted_data.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
